objects/ssot__CommunicationSubscriptionConsent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessBrandId__c</fullName>
        <label>Business Brand</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommunicationSubscriptionChannelTypeId__c</fullName>
        <label>Communication Subscription Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommunicationSubscriptionChannelType__c</fullName>
        <label>Communication Subscription Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommunicationSubscriptionId__c</fullName>
        <label>Communication Subscription</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedDateTime__c</fullName>
        <label>Consent Captured Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedSourceName__c</fullName>
        <label>Consent Captured Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentStatusId__c</fullName>
        <label>Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentStatus__c</fullName>
        <label>Consent Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointConsentId__c</fullName>
        <label>Contact Point Consent</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointValueText__c</fullName>
        <label>Contact Point Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeConsentId__c</fullName>
        <label>Engagement Channel Type Consent</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Communication Subscription Consent Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalAccountId__c</fullName>
        <label>Personal Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1696932794482_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionConsent_Com_rel</label>
        <referenceTo>ssot__CommunicationSubscriptionChannelType__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionConsent_Com_rel</relationshipLabel>
        <relationshipName>rel_1696932794482_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157063_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionConsent_Con_rel</label>
        <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionConsent_Con_rel</relationshipLabel>
        <relationshipName>rel_1697761157063_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157217_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionConsent_Par_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionConsent_Par_rel</relationshipLabel>
        <relationshipName>rel_1697761157217_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>